# prompt-optimizer

./: .gitignore  README.md  requirements.txt
.github/workflows/: ci-cd.yml
MVP/: api.py  data_manager.py  feedback.py  prompts.db  run.md  utils.py
MVP/backend/: api.py  main.py  output.py  prompts.db  query_db.py
MVP/backend/test/: test_get_all_records.py
MVP/frontend/src/: App.css  App.tsx
MVP/prompt-optimizer/: package-lock.json  package.json
MVP/prompt-optimizer/src/api/: promptService.ts
MVP/prompt-optimizer/src/components/: FeedbackForm.tsx  PromptOptimizer.tsx
MVP/prompt-optimizer/src/store/: promptStore.ts
MVP_test/: main copy.py  package-lock.json  test_data_manager.py  test_prompts.db
backend/: data_manager.py  feedback.py  input.py  optimizer.py  utils.py
client/: package-lock.json  package.json
client/src/: App.tsx
client/src/pages/: PromptCreate.tsx
pages/: PromptCreate.tsx
server/: main.py  pyproject.toml
server/api/: prompts.py
